# envcmd

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  Cargo.toml  LICENSE  README.md  go.mod  main.go  rustfmt.toml
.github/workflows/: build.yml  release.yml
internal/cmd/: cmd.go
internal/command/: command.go
internal/config/: config.go
internal/context/: context.go
internal/kind/: kind.go
internal/log/: log.go
src/: cmd.rs  config.rs  main.rs
